@@ -67,6 +67,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22991) wgUserGroups JavaScript variable now reports * group for
   anonymous users instead of null.
 * (bug 22627) Remove PHP notice when deleting a page only hidden users edited.
+* (bug 21520) Anonymous previews now also gives a warning about not being 
+logged in (anonpreviewwarning).
 
 == API changes in 1.17 ==
 * (bug 22738) Allow filtering by action type on query=logevent
